--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,4 @@ PORT=3333
 DATABASE_URL="postgresql://docker:docker@localhost:5432/agents" 
 
 # Gemini
-GEMINI_API_KEY="AIzaSyD8yUKqOZrRiOf5alHN7zUS0ZPuQVLKUk0"
+GEMINI_API_KEY="key"
