--- a/server/.env.example
+++ b/server/.env.example
@@ -8,4 +8,4 @@ DATABASE_URL="postgresql://docker:docker@localhost:5432/agents"
 
 # Gemini
 # Chave da API do Gemini atraves da "https://aistudio.google.com/app/apikey"
-GEMINI_API_KEY="AIzaSyD8yUKqOZrRiOf5alHN7zUS0ZPuQVLKUk0"
+GEMINI_API_KEY="key"
